<resources>
    <string name="app_name">Sky Dialer</string>


    <string name="agora_app_id">3a97a2460f214bd39bd80b04100ea52d</string>
    <!-- Please leave it if not enable App Certificate -->
    <!-- You can generate a temporary token at https://dashboard.agora.io/projects -->
    <string name="agora_access_token">3a97a2460f214bd39bd80b04100ea52d</string>

    <!-- NUMPAD LETTERS -->
    <string name="numpad_1" translatable="false"> </string>
    <string name="numpad_2">ABC</string>
    <string name="numpad_3">DEF</string>
    <string name="numpad_4">GHI</string>
    <string name="numpad_5">JKL</string>
    <string name="numpad_6">MNO</string>
    <string name="numpad_7">PQRS</string>
    <string name="numpad_8">TUV</string>
    <string name="numpad_9">WXYZ</string>
    <string name="numpad_0" translatable="false">+</string>
    <string name="numpad_star" translatable="false">*</string>
    <string name="numpad_hash" translatable="false">#</string>

    <!-- REGEX PATTERNS -->
    <string name="regex_0" translatable="false">[0\\ ]</string>
    <string name="regex_1" translatable="false">[1\\W]</string>
    <string name="regex_2">[2ABCabc]</string>
    <string name="regex_3">[3DEFdef]</string>
    <string name="regex_4">[4GHIghi]</string>
    <string name="regex_5">[5JKLjkl]</string>
    <string name="regex_6">[6MNOmno]</string>
    <string name="regex_7">[7PQRSpqrs]</string>
    <string name="regex_8">[8TUVtuv]</string>
    <string name="regex_9">[9WXYZwxyz]</string>
    <string name="regex_star" translatable="false">\\Q*\\E</string>
    <string name="regex_hash" translatable="false">\\Q#\\E</string>

    <!-- CALL INFORMATION -->
    <string name="date">Date</string>
    <string name="duration">Duration</string>

    <string name="create_contact">Create new contact</string>
    <string name="send_message">Send a message</string>
    <string name="show_info">Call information</string>
    <string name="make_a_call">Call</string>
    <string name="copy_number">Copy number</string>
    <string name="delete_log_entry">Delete log entry</string>

    <string name="delete_call_log_entry_question">Do you want to delete this call from the log?</string>
    <string name="contacts_app_is_missing">There is no contacts application installed to save contacts.</string>

    <!-- SPEED DIAL -->
    <string name="tap_for_addition">Tap for addition</string>
    <string name="voice_mail">Voice mail</string>
    <string name="remove_speed_dial_entry">Do you want to remove this number?</string>
    <string name="pick_contact_number">Pick contact number</string>

    <!-- POPUP MENU -->
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="clear_call_log">Clear call log</string>
    <string name="clear_call_log_question">Do you want to clear the call log?</string>
    <string name="fast_dial">Speed dial</string>
    <string name="call_recorder">Record Calls</string>
    <string name="dialer_preferences">Themes</string>
    <string name="dialer_voicechanger">Change Voice</string>
    <string name="dialer_profile">logout</string>
    <string name="dialer_about">About...</string>

    <!-- PREFERENCES -->
    <string name="preference_theme">Theme</string>
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    <string name="agora_app_id">a960a8596d36493e8ef9d94edd4ac7da</string>-->

</resources>
