<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/dialer_call_home"
		android:title="@string/home" />
	<item android:id="@+id/dialer_call_profile"
		android:title="@string/profile" />
	<item android:id="@+id/clear_call_log"
		android:title="@string/clear_call_log" />
	<item android:id="@+id/Agora_Call"
		android:title="Internet Call" />
	<item android:id="@+id/fast_dial_preferences"
		android:title="@string/fast_dial" />
	<item android:id="@+id/dialer_call_recorder"
		android:title="@string/call_recorder" />
	<item android:id="@+id/dialer_preferences"
		android:title="@string/dialer_preferences" />
	<item android:id="@+id/dialer_voice_changer"
		android:title="@string/dialer_voicechanger" />
	<item android:id="@+id/dialer_profile"
		android:title="@string/dialer_profile" />

 
</menu>
